[gd_scene load_steps=52 format=3 uid="uid://be4nqyaj2f23l"]

[ext_resource type="Texture2D" uid="uid://j64lo27o12ek" path="res://assets/sprites/Player/player_death.png" id="1_2gibg"]
[ext_resource type="Script" path="res://Scenes/player.gd" id="1_43awx"]
[ext_resource type="Texture2D" uid="uid://b6oolpuq1w3hp" path="res://assets/sprites/Player/player_double_jump.png" id="2_mmc35"]
[ext_resource type="Texture2D" uid="uid://dicbsm3xlnk5w" path="res://assets/sprites/Player/player_jump.png" id="3_s5ytd"]
[ext_resource type="Texture2D" uid="uid://cd1qslwjigmau" path="res://assets/sprites/Player/player_run.png" id="4_tpfuc"]
[ext_resource type="Texture2D" uid="uid://2tln4dd5dw11" path="res://assets/sprites/Player/player_run_shoot.png" id="5_5f3h3"]
[ext_resource type="AudioStream" uid="uid://hf1nwidv1osx" path="res://assets/sounds/jump.wav" id="7_x77a7"]
[ext_resource type="AudioStream" uid="uid://b1q18vohwgpph" path="res://assets/sounds/player_death.wav" id="8_fn81i"]
[ext_resource type="AudioStream" uid="uid://cns7gplqe180n" path="res://assets/sounds/player_shoot.wav" id="9_g3544"]

[sub_resource type="AtlasTexture" id="AtlasTexture_kyju5"]
atlas = ExtResource("1_2gibg")
region = Rect2(0, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_aa58v"]
atlas = ExtResource("1_2gibg")
region = Rect2(256, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_sdqsd"]
atlas = ExtResource("1_2gibg")
region = Rect2(512, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_2udqh"]
atlas = ExtResource("1_2gibg")
region = Rect2(768, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_fs72p"]
atlas = ExtResource("1_2gibg")
region = Rect2(1024, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_l7msf"]
atlas = ExtResource("1_2gibg")
region = Rect2(1280, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_gtw4q"]
atlas = ExtResource("1_2gibg")
region = Rect2(1536, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_k018y"]
atlas = ExtResource("1_2gibg")
region = Rect2(1792, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_i6uk5"]
atlas = ExtResource("1_2gibg")
region = Rect2(2048, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_bafod"]
atlas = ExtResource("2_mmc35")
region = Rect2(0, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_lbkim"]
atlas = ExtResource("2_mmc35")
region = Rect2(256, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_jn6aa"]
atlas = ExtResource("2_mmc35")
region = Rect2(512, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_wcg4c"]
atlas = ExtResource("2_mmc35")
region = Rect2(768, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_7aoas"]
atlas = ExtResource("2_mmc35")
region = Rect2(1024, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_dli1d"]
atlas = ExtResource("2_mmc35")
region = Rect2(1280, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_tpcmk"]
atlas = ExtResource("2_mmc35")
region = Rect2(1536, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_82vt5"]
atlas = ExtResource("3_s5ytd")
region = Rect2(0, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_cdpab"]
atlas = ExtResource("3_s5ytd")
region = Rect2(256, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_wjb1q"]
atlas = ExtResource("3_s5ytd")
region = Rect2(512, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_1dker"]
atlas = ExtResource("3_s5ytd")
region = Rect2(768, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_xh411"]
atlas = ExtResource("3_s5ytd")
region = Rect2(1024, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_naqha"]
atlas = ExtResource("3_s5ytd")
region = Rect2(1280, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_c62rr"]
atlas = ExtResource("3_s5ytd")
region = Rect2(1536, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_6dg40"]
atlas = ExtResource("3_s5ytd")
region = Rect2(1792, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_31kw8"]
atlas = ExtResource("4_tpfuc")
region = Rect2(0, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_yckds"]
atlas = ExtResource("4_tpfuc")
region = Rect2(256, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_n81ar"]
atlas = ExtResource("4_tpfuc")
region = Rect2(512, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_r2nj1"]
atlas = ExtResource("4_tpfuc")
region = Rect2(768, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_ndpsp"]
atlas = ExtResource("4_tpfuc")
region = Rect2(1024, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_iw3tp"]
atlas = ExtResource("4_tpfuc")
region = Rect2(1280, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_vyvgv"]
atlas = ExtResource("4_tpfuc")
region = Rect2(1536, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_ofm4v"]
atlas = ExtResource("4_tpfuc")
region = Rect2(1792, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_kflrg"]
atlas = ExtResource("5_5f3h3")
region = Rect2(0, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_eam02"]
atlas = ExtResource("5_5f3h3")
region = Rect2(256, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_xmnb8"]
atlas = ExtResource("5_5f3h3")
region = Rect2(512, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_pu6qq"]
atlas = ExtResource("5_5f3h3")
region = Rect2(768, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_6dsi6"]
atlas = ExtResource("5_5f3h3")
region = Rect2(1024, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_kbgvi"]
atlas = ExtResource("5_5f3h3")
region = Rect2(1280, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_uqjls"]
atlas = ExtResource("5_5f3h3")
region = Rect2(1536, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_cuad5"]
atlas = ExtResource("5_5f3h3")
region = Rect2(1792, 0, 256, 256)

[sub_resource type="SpriteFrames" id="SpriteFrames_8eviq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kyju5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aa58v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sdqsd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2udqh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fs72p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l7msf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gtw4q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k018y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i6uk5")
}],
"loop": false,
"name": &"death",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bafod")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lbkim")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jn6aa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wcg4c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7aoas")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dli1d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tpcmk")
}],
"loop": true,
"name": &"double_jump",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_82vt5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cdpab")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wjb1q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1dker")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xh411")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_naqha")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c62rr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6dg40")
}],
"loop": true,
"name": &"jump",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_31kw8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yckds")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n81ar")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r2nj1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ndpsp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iw3tp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vyvgv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ofm4v")
}],
"loop": true,
"name": &"run",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kflrg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eam02")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xmnb8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pu6qq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6dsi6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kbgvi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uqjls")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cuad5")
}],
"loop": true,
"name": &"shoot",
"speed": 12.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5m4w6"]
size = Vector2(100, 200)

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_layer = 2
script = ExtResource("1_43awx")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_8eviq")
animation = &"run"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 15)
shape = SubResource("RectangleShape2D_5m4w6")

[node name="JumpSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_x77a7")

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_fn81i")

[node name="ShootSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_g3544")

[node name="ProjectilePosition" type="Node2D" parent="."]
position = Vector2(123, -30)
